--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 header {
-    background-color: rgb(33, 127, 204);
+    background-color: rgb(7, 97, 170);
     margin: 0;
 }
 body {
-    background-color: rgb(207, 223, 233);
+    background-color: rgb(146, 162, 172);
     margin: 0;
 }
 
@@ -27,8 +27,9 @@ h1{
 }
 section.tasks div{
     display: grid;
-    grid-template-columns: auto auto auto auto; /*10% 10% 10% 10%*/;
-    gap: 100px;
+    grid-template-columns: 10% 10% 10% 10%;
+    gap: 50px;
+    margin-top: 20px;
     /* column-count: 4;
     /* background-color: white; 
     height: 200px;
@@ -56,6 +57,30 @@ ul li{
     border-style: hidden hidden hidden solid;
     border-width: thin thin thin 5px;
 }
+.task--view{
+    width: 200px;
+    height: 30px;
+    background-color: white;
+    padding-left: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    list-style-type:none;
+    border-radius: 5px;
+    border-style: hidden hidden hidden solid;
+    border-width: thin thin thin 5px;
+}
+.task__edit{
+    background-color: rgb(181, 103, 103);
+    border-radius: 4px;
+    padding: 5px;
+    width: 50px;
+    height: 20px;
+    color: white;
+    border: none;
+    margin-top: 10px;
+}
 #backlog li{
     border-left-color: lightgray;
 }
@@ -63,7 +88,10 @@ ul li{
     padding:10px;
     border-radius: 8px;
     background-color: lightskyblue;
-    width: 80px;
+    width: 100px;
+    text-align: center;
+    display: inline-block;
+    /* line-height: 30px; */
     text-decoration: aqua;
 }
 #process li{
@@ -97,6 +125,7 @@ ul li{
     width: 200px;
     color: white;
     border: none;
+    height: 20px;
 }
 #add_button{
     background-color: rgb(33, 127, 204);
@@ -115,6 +144,25 @@ ul li{
     border-radius: 8px;
     margin: 10px 10px 0px 0px;
     padding: 5px;
+}
+.taskboard{
+    display: flex;
+    gap: 50px;
+    margin: 20px;
+}
+
+
+#list_title{
+    padding:10px;
+    border-radius: 8px;
+    background-color: lightgray;
+    width: 150px;
+    text-align: center;
+    display: inline-block;
+}
+
+#tasklist li{
+    border-left-color: lightgray;
 }
 
 /* add-task__button button */
